# agentskills

./: README.md
.claude/skills/homeassistant/: SKILL.md
.claude/skills/homeassistant/examples/: automation-example.yaml  dashboard-example.yaml  hass-cli-setup.sh
.claude/skills/homeassistant/references/: automation-patterns.md  cli-commands.md  lovelace-cards.md  rest-api.md
.claude/skills/homeassistant/scripts/: backup-restore.sh  test-automation.sh  validate-config.sh
.claude/skills/roast-review/: README.md  SKILL.md
.claude/skills/roast-review/scripts/: repo_query.py
.claude/skills/spec-driven-development/: README.md  SKILL.md
.claude/skills/spec-driven-development/examples/: .agentignore
.claude/skills/spec-driven-development/examples/task-management-api/: pyproject.toml
.claude/skills/spec-driven-development/examples/task-management-api/.specs/: constitution.md
.claude/skills/spec-driven-development/examples/task-management-api/.specs/features/task-management-api/: data-model.md  plan.md  spec.md  tasks.md
.claude/skills/spec-driven-development/examples/task-management-api/.specs/features/task-management-api/contracts/: api.md
.claude/skills/spec-driven-development/examples/task-management-api/src/: main.py  models.py  store.py
.claude/skills/spec-driven-development/examples/task-management-api/tests/: test_api.py  test_models.py  test_store.py
.claude/skills/spec-driven-development/references/: philosophy.md  templates.md
